fix home page gap

--- a/AirDBUK/AirDBUK_App/static/styles.css
+++ b/AirDBUK/AirDBUK_App/static/styles.css
@@ -1,4 +1,8 @@
 /* search form styling */
+body, html {
+    margin: 0;
+    padding: 0;
+}
 
 .background-banner {
     background-color: #265284;
